--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ volumes:
     driver_opts:
       type: none
       #fill out your absolute path to your folder here
-      device: /absolute/path/to/web/template/folder
+      device: D:\ENEE400\proj3\cmsc389T-web-template
       o: bind
 
 networks:
