--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,9 @@ version: '3'
 
 services:
   nodejs:
+    build:
+      context: .
+      dockerfile: Dockerfile
     image: node:latest
     container_name: nodejs
     networks:
