--- a/main.yml
+++ b/main.yml
@@ -7,5 +7,5 @@ jobs:
     container: 
       steps:
         - uses: actions/checkout@v2
-        - container: openjdk
+        - container: node
         run: echo "main"
