--- a/.github/workflows/docker-testing.yml
+++ b/.github/workflows/docker-testing.yml
@@ -21,7 +21,7 @@ jobs:
         run: |
           docker build -t node-web-app .
           docker run --name "website" -p 80:8080 -d node-web-app
-          wget -O index.html localhost:80
+          wget -O index.html 127.0.0.1:80
   
   
           
