--- a/.github/workflows/clone.yml
+++ b/.github/workflows/clone.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Clone
-        uses: appleboy/ssh-action@master
+        uses: mattval1342/ssh-action@master
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
