--- a/.github/workflows/docker-testing.yml
+++ b/.github/workflows/docker-testing.yml
@@ -3,6 +3,15 @@ name: Docker-Testing
 on: [workflow_dispatch]
 
 jobs:
+  build-website:
+  runs-on: ubuntu-latest
+  steps:
+    - uses: actions/checkout@v2
+    - name: Build Website Container
+      run: |
+        docker build -t node-web-app .
+        docker run --name "website" -p 80:8080 -d node-web-app
+        wget -O index.html localhost:80
   docker-compose:
     runs-on: ubuntu-latest
     steps:
@@ -12,16 +21,8 @@ jobs:
           sed -i "s/device:.*/device: $(pwd | sed 's/\//\\\//g')/g" docker-compose.yml
           cat docker-compose.yml
           docker-compose up -d
-          wget -O index.html 127.0.0.1:80
-  build-website:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Build Website Container
-        run: |
-          docker build -t node-web-app .
-          docker run --name "website" -p 80:8080 -d node-web-app
-          wget -O index.html 127.0.0.1:80
+          wget -O index.html loclahost:80
+
   
   
           
