--- a/.github/workflows/docker-testing.yml
+++ b/.github/workflows/docker-testing.yml
@@ -21,7 +21,7 @@ jobs:
           sed -i "s/device:.*/device: $(pwd | sed 's/\//\\\//g')/g" docker-compose.yml
           cat docker-compose.yml
           docker-compose up -d
-          wget -O index.html loclahost:80
+          wget -O index.html localhost:80
 
   
   
