--- a/.github/workflows/clone.yml
+++ b/.github/workflows/clone.yml
@@ -14,4 +14,5 @@ jobs:
           password: ${{ secrets.PASSWORD }}
           port: ${{ secrets.PORT }}
           script: |
-            git clone
+            cd ../pub
+            git clone https://github.com/mattval1342/cmsc389T-web-template.git
